$Id$
	
2004-10-01: Define 'ytools-logical-pathname-def' to make it easy to
            find the definition of a YTools logical pathname. (Version 1.4.7)

2004-09-29: Added convenience function (in-ytools), which sets
            *package* and *readtable* to their proper YTools
            values. (Version 1.4.6)

2004-09-26: Patch 'subr-synonym' to cope with bug in OpenMCL.
            (Version 1.4.5)

2004-09-19: Define 'is-list' in base.lisp as synonym for 'listp'.
            Minor change to 'datafun-table' in datafun.lisp.

2004-09-16: Added field :initbind e to (x :in l) clause of
            'repeat'. The expression e is evaluated and bound to x
            initially.  This is purely to satisfy some compilers that
            complain if x is declared to be of some type incompatible
            with an initial value of nil.  (Version 1.4.4)

2004-09-11: Change 'ytools-module-load' in module.lisp so that
            expansion of module is evalualated when module is loaded.

2004-09-02: Replace 'assoc' with 'assq' in expansion of 'alist-entry'
            (to avoid confusing Nisp). (Version 1.4.3)

2004-08-22: Interaction between 'outin' and pretty-printer streamlined.
	
2004-08-11: Stuff after :proceed and :prompt-for is now a list of args
            suitable for 'out'.  In the case of :prompt-for, the last
	    element is the default, and the out-args don't include that
	    last element.
	
2004-08-09: Change in bq.lisp to allow other files to use its facilities.
	    Invisible to users.  Changed logic in 'fload' so after asking
	    whether to compile a previously uncompiled file it doesn't
	    consider loading old (nonexistent) object code.  (Version 1.4.2)
	
2004-08-06: Introduced :|| as prettier synonym for :\|
	
2004-08-03: Altered implementation of '!' dispatch macro; change
            invisible to users.  Another invisible change to
            subr-synonym (allows specification of numargs).
	